se modifica readme y se prueba test