@@ -1,11 +1,11 @@
 # Ciencias de la Computación II — Labs con Welcome Kit
 
 Son 6 laboratorios independientes para el curso de CC2, integrando hardware
-y software: ESP32 + shield Welcome Kit (MicroPython) para el hardware, y
-Java (POO) para la lógica y visualización.
+y software con ESP32 y Welcome Kit para el hardware y
+Java para la lógica y visualización.
 
-Cada laboratorio es **independiente** (su propio hardware, su propia
-entrega). No se heredan clases entre labs.
+Cada laboratorio es **independiente** (su propio circuito y su propia
+entrega)
 
 | Lab | Tema Java | Estructura de datos | Hardware |
 |-----|-----------|---------------------|----------|
@@ -18,9 +18,9 @@ entrega). No se heredan clases entre labs.
 
 **Notas:**
 
-- Lab 1 es el único donde el flujo va Java → ESP32 (Java arma el color y se
-  lo manda al neopixel). En los demás labs el ESP32 lee el sensor y envía
+- Lab 1 es el único donde el flujo va Java hacia ESP32, en los demás labs el ESP32 lee el sensor y envía
   los datos a Java.
+
 - Lab 3: el ESP32 envía el valor del DIP switch, Java calcula la
   combinación de segmentos y se la devuelve al ESP32 (o al display)  aun pendiente de preguntar xd 
 
@@ -37,9 +37,7 @@ LabN/
 ## Conexiones fijas usadas en el shield Welcome Kit
 
 - **Neopixel:** pin **25**
-- **LED integrado:** pin 2
-- **Buzzer:** pin 26
-- Pines analógicos de sensores: se indican en la guía de cada lab.
+- Pines analógicos de sensores: se indican en la guía de cada lab 
 - Todos los scripts corren a **115200 baudios**.
 
 ## Estado
@@ -57,7 +55,7 @@ LabN/
 
 Antes de empezar hay que instalar 2 dependencias/JDK
 
-1. **Thonny** — para programar el ESP32 en MicroPython (esto ya lo vieron en CC1).
+1. **Thonny** — para programar el ESP32 en MicroPython
 2. **Java (JDK) + jSerialComm** — para programar la aplicación que lee/envía los datos.
 
 ---
@@ -67,24 +65,56 @@ Antes de empezar hay que instalar 2 dependencias/JDK
 ### 1.1 Instalar Thonny
 
 - Windows / macOS: descarga el instalador desde <https://thonny.org>
-- Linux: `sudo apt install thonny` 
+
+- Linux: `sudo apt install thonny`
+
+![Sitio web](img/instalacion.png)
 
 ### 1.2 Conectar el ESP32
 
-1. Conecta el ESP32 (shield Welcome Kit) a la PC con un cable USB 
-2. Abre Thonny.
-3. Ve a **Herramientas → Opciones → Intérprete**.
-4. En "Intérprete" elige **MicroPython (ESP32)**.
-5. En "Puerto" elige el que aparezca (algo como `COM3` en Windows o `/dev/ttyUSB0` en Linux/Mac). Anota este puerto, lo vas a necesitar más adelante.
-6. Presiona **Aceptar**. Abajo, en la consola (Shell), debería aparecer `>>>`. Eso significa que ya estás hablando con el ESP32.
+1. Conecta el ESP32 a la PC con un cable USB 
 
-> Si el firmware de MicroPython no está instalado, en la misma ventana de "Intérprete" hay un botón para instalarlo. Elige el modelo ESP32 y presiona instalar.
+![Esp32](img/esp32.jpeg)
+
+2. Abre Thonny con el comando siguiente
+```bash
+thonny
+```
+![Sitio web](img/thonny1.png)
+
+
+3. Ve a **Tools - Options - Interpreter**.
+4. En "Intérprete" elige **MicroPython (ESP32)**.
+![Sitio web](img/thonny2.png)
+![Sitio web](img/thonny3.png)
+
+**Nota**
+*Si es primera vez utilizando micropython debes instalarlo en la esp32* 
+
+Selecciona la opcion en Interpreter de **Install or update MicroPython (esptool)**
+Luego seleccionas el puerto serial donde este la ESP32, luego la familia de ESP32 (en este caso es la general para ESP32) y finalmente la variante, usaremos la variante generica de Espressif 
+![Sitio web](img/thonny4.png)
+
+Luego presionamos instalar y esperamos a que termine el proceso (puede tardar unos segundos o minutos)
+![Sitio web](img/thonny5.png)
+![Sitio web](img/thonny6.png)
+
+5. En "Puerto" elige el que corresponde a la ESP32 y presionamos OK
+![Sitio web](img/thonny7.png)
+
+
+6. Abajo, en la consola (Shell), debería aparecer `>>>`. Eso significa que ya esta conectado con la ESP32.
+![Sitio web](img/thonny8.png)
+
 
 ### 1.3 Cómo correr un script en el ESP32
 
 1. Abre el archivo `.py` del laboratorio en Thonny (menú **Archivo → Abrir**).
 2. Presiona el botón verde **Run (F5)**.
-3. Los datos que el ESP32 imprime con `print(...)` (o los mensajes de confirmación, según el lab) aparecen en la **consola (Shell)** de abajo. Ahí puedes confirmar que está funcionando bien antes de conectar Java.
+3. Los datos que el ESP32 imprime con `print(...)` (o los mensajes de confirmación, según el lab) aparecen en la **consola (Shell)** de abajo. 
+
+*Ahí puedes confirmar que está funcionando bien antes de conectar Java.*
+![Sitio web](img/thonny9.png)
 
 > **IMPORTANTE:** Java y Thonny **no pueden usar el puerto al mismo tiempo**.
 > Cuando vayas a correr el programa de Java, primero detén el script en Thonny
@@ -93,46 +123,60 @@ Antes de empezar hay que instalar 2 dependencias/JDK
 
 ---
 
-## Parte 2 — Java (JDK)
-
-### 2.1 Instalar el JDK
-
-Descarga **Java 21 (Temurin)** desde <https://adoptium.net>:
-
-- Windows: descarga el `.msi`, instálalo dejando las opciones por defecto (asegúrate de marcar "Add to PATH" si aparece).
-- macOS: descarga el `.pkg` e instálalo.
-- Linux: `sudo apt install openjdk-21-jdk`.
-
-### 2.2 Verificar la instalación
-
-Abre una terminal (en Windows: **CMD** o **PowerShell**) y escribe:
-
-```
-java -version
-javac -version
-```
-
-Ambos deben mostrar una versión 21.x. Si dice "comando no encontrado", reinstala marcando la opción de agregar al PATH.
-
----
-
-## Parte 3 — jSerialComm (para que Java lea/escriba el puerto serie)
+## Parte 2 — jSerialComm
 
 Java por sí solo **no sabe leer un puerto USB/serie**, así que usamos una librería
-muy pequeña y estándar llamada **jSerialComm**. Es **un solo archivo `.jar`**, no es
+llamada **jSerialComm**. 
+
+Es **un solo archivo `.jar`**, no es
 un plugin ni requiere instalación.
 
-### 3.1 El `.jar` ya está en este repo
+### 2.1 El `.jar` ya está en este repo
 
-El archivo `jSerialComm-2.11.4.jar` ya está en esta carpeta (raíz del
-repositorio, junto a este archivo). Si necesitas una versión más nueva,
-descárgala de <https://github.com/Fazecast/jSerialComm/releases> y
-reemplázalo aquí — todos los labs lo referencian desde un nivel arriba
-(`..\jSerialComm-2.11.4.jar`).
+El archivo `jSerialComm-2.11.4.jar` ya está en esta carpeta.
 
-### 3.2 Cómo compilar y correr usando el `.jar`
+> **Nota:** que el `.jar` esté ahí no basta. Java nunca busca `.jar`
+> automáticamente en la carpeta, hay que decirle dónde está con `-cp`
+> (*classpath*) cada vez que compilas o corres. 
 
-Estando en la carpeta de un lab (un nivel abajo de este archivo):
+> Sin `-cp` apuntando al jar,
+> `javac` falla con `package com.fazecast.jSerialComm does not exist`
+> aunque el archivo esté ahí al lado.
+
+### 2.2 Primero: probar que todo quedó bien instalado (`SerialTest.java`)
+
+Antes de meterte a cualquier lab, usa `SerialTest.java` para confirmar que el JDK y jSerialComm están funcionando:
+
+```
+javac -cp ".;jSerialComm-2.11.4.jar" SerialTest.java
+java  -cp ".;jSerialComm-2.11.4.jar" SerialTest
+```
+
+Con el ESP32 conectado (y Thonny cerrado o detenido para no bloquear el
+puerto), deberías ver algo como:
+
+![Sitio web](img/thonny10.png)
+
+> **Warnings que puedes ignorar:** antes de esa salida es normal que
+> aparezcan varias líneas como estas:
+> ```
+> WARNING: A restricted method in java.lang.System has been called
+> WARNING: java.lang.System::loadLibrary has been called by com.fazecast.jSerialComm.SerialPort in an unnamed module (file:/.../jSerialComm-2.11.4.jar)
+> WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
+> WARNING: Restricted methods will be blocked in a future release unless native access is enabled
+> ```
+> Son advertencias del JDK 21+ porque jSerialComm usa una librería nativa
+> (JNI) para hablar con el puerto serie, y las versiones nuevas de Java
+> avisan cada vez que se hace eso. No son errores el programa sigue
+> corriendo normal y el puerto se abre igual. Si molestan, se pueden quitar
+> agregando `--enable-native-access=ALL-UNNAMED` al comando `java` (opcional,
+> no es necesario para que funcione el lab).
+
+
+### 2.3 Compilar y correr un laboratorio
+
+Ya que `SerialTest.java` funcionó, el patrón es el mismo para cualquier
+`LabN_*.java`. Estando en la carpeta del lab:
 
 **Windows (usa `;` como separador):**
 ```
@@ -148,37 +192,9 @@ java  -cp ".:../jSerialComm-2.11.4.jar" Lab1_solucion
 
 > Cambia `Lab1_solucion` por el archivo del laboratorio que estés corriendo.
 
-### 3.3 Probar que todo quedó bien instalado (`SerialTest.java`)
-
-Antes de meterte a cualquier lab, usa `SerialTest.java` (en la raíz de este
-repo) para confirmar que el JDK y jSerialComm están funcionando:
-
-```
-javac -cp ".;jSerialComm-2.11.4.jar" SerialTest.java
-java  -cp ".;jSerialComm-2.11.4.jar" SerialTest
-```
-
-Con el ESP32 conectado (y Thonny cerrado o detenido para no bloquear el
-puerto), deberías ver algo como:
-
-```
-Available Ports:
-0: COM3
-Port successfully opened!
-Port closed.
-```
-
-- Si la lista de puertos sale **vacía**, el problema es de driver/cable, no
-  de Java: revisa el Administrador de Dispositivos.
-- Si dice **"Failed to open port"**, seguramente Thonny (u otro programa)
-  todavía tiene el puerto abierto.
-- Si compila y corre sin errores de clase (`NoClassDefFoundError`), eso
-  confirma que el `.jar` está bien referenciado — ese mismo `-cp` es el que
-  vas a usar en cada lab.
-
 ---
 
-## Parte 4 — Encontrar el nombre del puerto (COM)
+## Parte 3 — Encontrar el nombre del puerto (COM)
 
 Cada programa de Java tiene una línea como:
 
@@ -204,16 +220,3 @@ Debes poner ahí el mismo puerto que Thonny (o `SerialTest.java`) mostró:
 
 ---
 
-## Nota sobre las variantes de los labs con sensores (Lab 2, 4 y 5)
-
-Esos laboratorios traen (o van a traer) **dos scripts de Python**:
-
-- `*_real.py` → usa los sensores físicos reales (potenciómetro, LM35, etc.).
-- `*_random.py` → **no necesita sensores**, envía datos al azar en el mismo formato.
-
-Usa la versión `random` para **probar tu programa de Java y la conexión serial
-sin tener que cablear nada**. Cuando tu Java ya funcione con datos al azar,
-cambias al script `real` y solo conectas los sensores. **El programa de Java
-es exactamente el mismo para las dos versiones.**
-
-> El Lab 1 no aplica aquí: no lee sensores, solo recibe colores desde Java.
